Actions
Bug #5769
closedCast 'zfs bad bloc' to ULL for x86
Start date:
2015-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Pull in the following patch from ZoL:
https://github.com/zfsonlinux/zfs/commit/dd26aa5
commit dd26aa535b395735ca61ea2a3e618aded45eb05e
Author: Brian Behlendorf <behlendorf1@llnl.gov>
Date: Mon Feb 4 16:35:54 2013 -0800
Cast 'zfs bad bloc' to ULL for x86
Explicitly case this value to an unsigned long long for 32-bit
systems to inform the compiler that a long type should not be
used. Otherwise we get the following compiler error:
dmu_send.c:376: error: integer constant is too large for
`long' type
Updated by Electric Monk over 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 8c76e0763bcf0029556e106377da859f6492a7ee
commit 8c76e0763bcf0029556e106377da859f6492a7ee Author: Brian Behlendorf <behlendorf1@llnl.gov> Date: 2015-04-06T15:47:32.000Z 5769 Cast 'zfs bad bloc' to ULL for x86 Reviewed by: Prakash Surya <prakash.surya@delphix.com> Reviewed by: Matthew Ahrens <mahrens@delphix.com> Reviewed by: Paul Dagnelie <paul.dagnelie@delphix.com> Reviewed by: Richard PALO <richard@NetBSD.org> Approved by: Dan McDonald <danmcd@omniti.com>
Actions